# cpp_converters_ws

./: .gitignore  README.md  requirements.txt
cpp_converter/: CMakeLists.txt  package.xml
cpp_converter/cmake/: cpp_converter-extras.cmake  generator.cmake  message_generator.cmake  type_case_converter.cmake
stm_converter/: package.xml  setup.cfg  setup.py
stm_converter/docs/: conf.py  index.rst  modules.rst  stm_converter.rst  stm_converter_cmake.rst  stm_converter_templates.rst
stm_converter/resource/jinja_templates/: type_adapter.txt
stm_converter/resource/templates/: Type1.txt  Type2.txt  Type3.txt  type_adapter.txt
stm_converter/resource/templates/type_adapter/: type_adapter.txt  type_adapter1.txt
stm_converter/resource/templates/type_adapter/array_types/: adapter__to_custom.txt  adapter__to_ros.txt  loop.txt  np_push_back.txt  push_back.txt
stm_converter/resource/templates/type_adapter/includes/: extras.txt  includes.txt
stm_converter/resource/templates/type_adapter/non_array_types/: na_adapter__to_custom.txt  na_adapter__to_ros.txt  non_array_types.txt
stm_converter/stm_converter/: generator.py  main.py  parser.py  ros_msg_generator.py  utils.py  xml_parser.py
testing/test_case_1/msg_pkg_one/: CMakeLists.txt  package.xml
testing/test_case_1/msg_pkg_one/include/msg_pkg_one/: type_from_one.hpp  typedef_type.hpp
testing/test_case_1/msg_pkg_one/src/: simplePublisher.cpp
tests/msg_descriptions/package_one/: CMakeLists.txt  package.xml
tests/msg_descriptions/package_one/include/package_one/: pkg_one_msg.hpp
tests/msg_descriptions/package_one/msg/: PkgOneMsg.msg
tests/msg_descriptions/package_two/: CMakeLists.txt  package.xml
tests/msg_descriptions/package_two/include/package_two/: pkg_two_msg.hpp
tests/msg_descriptions/package_two/msg/: PkgTwoMsg.msg
tests/msg_descriptions/package_two/src/: simplePublisher.cpp
tests/msgs/msg_pkg_four/: CMakeLists.txt  package.xml
tests/msgs/msg_pkg_four/include/msg_pkg_four/: using_num.hpp
tests/msgs/msg_pkg_four/msg/: UsingNum.msg
tests/msgs/msg_pkg_one/: CMakeLists.txt  package.xml
tests/msgs/msg_pkg_one/include/msg_pkg_one/: type_from_one.hpp  typedef_type.hpp
tests/msgs/msg_pkg_one/msg/: TypeFromOne.msg
tests/msgs/msg_pkg_three/: CMakeLists.txt  package.xml
tests/msgs/msg_pkg_three/include/msg_pkg_three/: num.hpp
tests/msgs/msg_pkg_three/msg/: Num.msg
tests/msgs/msg_pkg_two/: CMakeLists.txt  package.xml
tests/msgs/msg_pkg_two/include/msg_pkg_two/: my_test_msg.hpp
tests/msgs/msg_pkg_two/msg/: MyTestMsg.msg
tests/msgs/msg_pkg_two/src/: simplePublisher.cpp
tests/msgs/use_msg_pkg_three/: CMakeLists.txt  package.xml
tests/msgs/use_msg_pkg_three/include/use_msg_pkg_three/: correct_type_adapter.hpp  use_num.hpp
tests/msgs/use_msg_pkg_three/msg/: UseNum.msg
tests/test_case_1/msg_pkg_one/: CMakeLists.txt  package.xml
tests/test_case_1/msg_pkg_one/include/msg_pkg_one/: type_from_two.hpp  type_one.hpp  type_three.hpp
tests/test_case_2/msg_pkg_two/: CMakeLists.txt  package.xml
tests/type_adapters/msg_test/: CMakeLists.txt  package.xml
tests/type_adapters/test_msg_pkg_four/: CMakeLists.txt  package.xml
tests/type_adapters/test_msg_pkg_four/src/: publisher.cpp  subscriber.cpp
tests/type_adapters/test_msg_pkg_one/: CMakeLists.txt  package.xml
tests/type_adapters/test_msg_pkg_one/src/: publisher.cpp  subscriber.cpp
tests/type_adapters/test_package_two/: CMakeLists.txt  package.xml
tests/type_adapters/test_package_two/src/: publisher.cpp  subscriber.cpp
